# K-Means-MNIST

./: kmeans.md
K-Means-MNIST/: kmeans.md
K-Means-MNIST/code/: CMakeLists.txt  main.cpp
K-Means-MNIST/code/include/: clusters.h  imagevectors.h  kmeans.h
K-Means-MNIST/code/src/: kmeans.cpp
code/: CMakeLists.txt  main.cpp
code/include/: clusters.h  imagevectors.h  kmeans.h
code/src/: clusters.cpp  imagevectors.cpp  mnistreader.cpp
