cmake_minimum_required(VERSION 2.8)
project(kmeans)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/include)
file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
add_executable(kmeans main.cpp ${SOURCES})
target_link_libraries(kmeans ${OpenCV_LIBS})
